2019-11-04  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-13 / 10.0) for FM13 
        for sideband leakage testing.

2019-10-31  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-12 / 10.0) for FM13 
        for sideband leakage testing.

2019-08-30  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Changing to r0 = 10.0 ^ (-11 / 10.0) for FM13.

2019-09-05  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-10.7 / 10.0) for FM13 
        for sideband leakage testing.

2019-09-05  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11.3 / 10.0) for FM13 
        for sideband leakage testing.

2019-09-05  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11 / 10.0) for FM13 
        for sideband leakage testing.

2019-09-05  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-14.4 / 10.0) for FM13 
        for sideband leakage testing.

2019-08-30  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Changing to r0 = 10.0 ^ (-11 / 10.0) for FM19.

2019-07-15  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-10.7 / 10.0) for FM19 
        for sideband leakage testing.

2019-07-11  Francesco Grieco  <francesco.grieco@chalmers.se>

        * Mscripts_misc/sband_from_l1b: Temporarily changing to r0 = 10.0 ^ (-11.3 / 10.0) for FM19 
        for sideband leakage testing.

2019-07-09  Francesco Grieco  <francesco.grieco@chalmers.se>
